; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/reqrep/extr_rep.c_nn_rep_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/reqrep/extr_rep.c_nn_rep_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_rep = type { i32, i32, i32 }

@NN_REP_INPROGRESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_rep_term(%struct.nn_rep* %0) #0 {
  %2 = alloca %struct.nn_rep*, align 8
  store %struct.nn_rep* %0, %struct.nn_rep** %2, align 8
  %3 = load %struct.nn_rep*, %struct.nn_rep** %2, align 8
  %4 = getelementptr inbounds %struct.nn_rep, %struct.nn_rep* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @NN_REP_INPROGRESS, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.nn_rep*, %struct.nn_rep** %2, align 8
  %11 = getelementptr inbounds %struct.nn_rep, %struct.nn_rep* %10, i32 0, i32 2
  %12 = call i32 @nn_chunkref_term(i32* %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load %struct.nn_rep*, %struct.nn_rep** %2, align 8
  %15 = getelementptr inbounds %struct.nn_rep, %struct.nn_rep* %14, i32 0, i32 1
  %16 = call i32 @nn_xrep_term(i32* %15)
  ret void
}

declare dso_local i32 @nn_chunkref_term(i32*) #1

declare dso_local i32 @nn_xrep_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
